Rettelser til appendix

--- a/Rapport/1Chapters/Filters/Design.tex
+++ b/Rapport/1Chapters/Filters/Design.tex
@@ -69,7 +69,7 @@ The interpolation filter as mentioned before must be designed so it does not inf
 
 \begin{figure}[H]
 \centering
-	\includegraphics[width=\textwidth]{figures/DecIntCompMirror}
+	\includegraphics[width=0.7\textwidth]{figures/DecIntCompMirror}
 \caption{Decimation filter (blue) with mirrored decimation filter (dark blue)}
 \label{fig:MirrorDec}
 \end{figure}
