--- a/Rapport/2Appendix/Distortion.tex
+++ b/Rapport/2Appendix/Distortion.tex
@@ -1,10 +1,12 @@
 \section{Distortion} \label{app:distortion}
 
 Lastly it is important to know what type of sound is wanted in the system. What is desirable and what is unwanted. This is known as distortion. This section covers only the fundamentals of distortion, particular harmonic distortion, and describes what this project will be trying to achieve and avoid. Harmonic distortion is usually negative and unwanted. Distortion however, comes in two categories:
+\vspace{-2mm}
 \begin{itemize}
 \item Odd Distortion
 \item Even Distortion
 \end{itemize}
+\vspace{-2mm}
 These are classified by looking at the fundamental frequency and is then categorized by how far away, indexed by whole integers, they are from the fundamental frequency. Looking at an ordinary tone, such as $A_4$ which is a tone at 440 Hz the concept is easier to describe. This tone is usually used to tune audio equipment such as guitars and alike. Conforming \autoref{fig:ODDevenTHD} a spectral analysis of $A_4$ tone is shown. \autoref{fig:EvenTHD} shows the 440 Hz tone with even harmonics and \autoref{fig:OddTHD} with odd harmonics. 
 
 \begin{figure}[H]
