--- a/Rapport/2Appendix/ListningTest.tex
+++ b/Rapport/2Appendix/ListningTest.tex
@@ -47,7 +47,7 @@ The Songs are mastered with the following effectblocks via Logic Pro:
     \item Attack time of 0.5 ms and release time of 1 ms
     \end{itemize}
 \end{minipage}\par\bigskip
-Test clips can be found on \path{CD://ListningTestFiles/MultiX.wav} and SingleX.wav respectively where X corresponds to the index number of the song.
+Test clips can be found on \path{CD://ListningTestFiles/} as \path{MultiX.wav} and \path{SingleX.wav} respectively where X corresponds to the index number of the song.
 
 
 
@@ -57,7 +57,7 @@ The setup inside the rooms is done as displayed on \autoref{figure:SpeakertestSe
 \centering
 \tikzsetnextfilename{TestSetupListning}
 \begin{tikzpicture}
-\draw  (-4,3) rectangle (4,-2);
+\draw  (-3,2) rectangle (3,-1);
 \draw  (2,1) rectangle (1,0);
 \draw  (-2,0.5) ellipse (0.5 and 0.5);
 \node at (-2,1.25) {Person};
