--- a/Rapport/2Appendix/SpeakerTEST.tex
+++ b/Rapport/2Appendix/SpeakerTEST.tex
@@ -488,3 +488,6 @@ It is seen that the energy for non-harmonic frequencies is increased at very low
 \section{Error sources}
 
 Few errors could have occurred during trials, since then only variable adjusted during between measurements were the gain of the amplifier. There were however problems with moving the setup from the control room were it was calibrated and then moved into the anechoic room. The calibration was done using an visual equalizer where the output was shown with a bar chart Hence the data should bee seen with a tolerance of +/- 0.5 dB.
+
+\section{Conclusion}
+From the trials it showed it was possible to detect a hit against the back plate. The draw back of using an accelerometer was however that it was not possible to determine a hit before it happened. It was possible to determine a specific power consumption at which the hit will occur which can be used for determining a model usable in a feedforward system.
