--- a/Rapport/2Appendix/SpeakerTESTOneFrequency.tex
+++ b/Rapport/2Appendix/SpeakerTESTOneFrequency.tex
@@ -245,3 +245,4 @@ calibration was done using an visual equalizer where the output was shown with a
 
 \section{Conclusion}
 
+From these test it can be concluded that the speaker dose not create any significant ''hit pattern'' when different tones a played. It can however be concluded that the speaker has an increase in THD when the amplification is increased. This creates basis for determination of model to predict how the speaker will react to a specific amplification at a specific frequency.  Futhermore it shows that less precise sparkfun accelerometer can not create a usable output. 
