--- a/Rapport/figures/raw_driver19_window_zoom.tex
+++ b/Rapport/figures/raw_driver19_window_zoom.tex
@@ -20,6 +20,9 @@ xmajorgrids,
 ymin=-0.1,
 ymax=0.1,
 ymajorgrids,
+scaled ticks=false,
+ytick={-0.1, -0.05, 0,  0.05, 0.1},
+yticklabels={-0.1, -0.05, 0,  0.05, 0.1},
 axis x line*=top,
 xlabel={Frequency [Hz]},
 axis background/.style={fill=white}
@@ -37,7 +40,9 @@ xmajorgrids,
 ymin=-0.1,
 ymax=0.1,
 ymajorgrids,
-yticklabels={\empty},
+scaled ticks=false,
+ytick={-0.1, -0.05, 0,  0.05, 0.1},
+yticklabels={-0.1, -0.05, 0,  0.05, 0.1},
 xlabel={Time [s]},
 axis background/.style={fill=white}
 ]
