--- a/Rapport/1Chapters/1Preanalysis/Loudspeaker_test.tex
+++ b/Rapport/1Chapters/1Preanalysis/Loudspeaker_test.tex
@@ -3,11 +3,11 @@ In order to determine whether or not it is possible to use sensory equipment to 
 
 \begin{figure}[H]
 \centering
-\includegraphics[width=0.5\textwidth]{figures/zensor5.png}
+\includegraphics[width=0.4\textwidth]{figures/zensor5.png}
 \caption{DALI Zensor 5 \citep{sou:daliZensor5}.}
 \label{fig:dali_zensor5}
 \end{figure}
-
+\vspace{-4mm}
 %\todo[inline]{Reference http://www.dali-speakers.com/loudspeakers/zensor/zensor-5/}
 
 For measuring the vibrations two Bruel \& Kjær (B\&K) accelerometers have been placed inside the enclosure, one on the back of the bottom driver and one on the top back of the enclosure. For measuring sound a microphone has been placed 1 m from the speaker. To limit any reflections from the room, the test is performed in a Anechoic room at \gls{AAU}, for further documentation refer to the journal in \autoref{app:journal_speaker_test}.  
@@ -30,7 +30,7 @@ There are many different approaches in analysing the measured data, and the appr
 
 %\vspace{3mm}
 
-During the first accelerometer measurements the loudspeaker acts linear with very little fluctuations. The frequency response keeps being steadily the same with an increase in amplitude which was expected. In \autoref{fig:Driver1} the first accelerometer measurement is shown, played using 5 mW at XX dB$_{\text{SPL}}$\todo{Fix dB SPL}, on the driver is seen. \autoref{fig:Enclosure1Report} shows the enclosure having a mechanical resonance frequencies at approximately 13 seconds and at 25 seconds while the driver's resonance frequency occurs at 25 seconds. An antiresonance frequency is located at 13 seconds for the accelerometers placed on the driver. The antiresonance frequency is assumed to be caused by the enclosure resonance frequency. This pattern continues for approximately 15 measurements. 
+During the first accelerometer measurements the loudspeaker acts linear with very little fluctuations. The frequency response keeps being steadily the same with an increase in amplitude which was expected. In \autoref{fig:Driver1} the first accelerometer measurement is shown, played using 5 mW at 97 dB$_{\text{SPL}}$, on the driver is seen. \autoref{fig:Enclosure1Report} shows the enclosure having a mechanical resonance frequencies at approximately 13 seconds and at 25 seconds while the driver's resonance frequency occurs at 25 seconds. An antiresonance frequency is located at 13 seconds for the accelerometers placed on the driver. The antiresonance frequency is assumed to be caused by the enclosure resonance frequency. This pattern continues for approximately 15 measurements. 
 
 %\todo{Billede af reference tids figur og forklaring af resonans frekvens} %A tendency shows that the 3rd harmonic increases more rapidly than the 2nd harmonic, again as expected for the performance of a loudspeaker.
 
@@ -52,7 +52,7 @@ During the first accelerometer measurements the loudspeaker acts linear with ver
 \caption{Raw data from the driver measured by an accelerometer placed on the driver. The greyed area is analysed to examine if there are any signs of an impulse.}
 \label{fig:dataset1}
 \end{figure}
-
+\vspace{-5mm}
 When the speaker was pushed beyond the capabilities specified by DALI an anomaly appears in the measurements. This is shown in \autoref{fig:raw_driver19_window_main}, where spikes in amplitude appear when playing very low frequency sound. 
 
 \begin{figure}[H]
