--- a/Rapport/1Chapters/RMS/RMSMAIN.tex
+++ b/Rapport/1Chapters/RMS/RMSMAIN.tex
@@ -36,7 +36,7 @@ The RMS limiter will be used to suppress large amplitude levels in the lower fre
 	\label{fig:THDComparissonRMS}
 \end{figure} 
 
-In each figure the worst case scenario is chosen as basis for creating a model to describe the THD level according the RMS value. The RMS value in the graphs should seen as 0 dBFS according to the DSP, meaning 1.0 RMS value correspond to a input of 0.5 $\text{V}_\text{RMS}$. The Preceding section will be covering the determination of the most suitable parameters based on the requirements from \autoref{ch:requirements} and the models. The requirements are as follows:
+In each figure the worst case scenario is chosen as basis for creating a model to describe the THD level according the RMS value. The RMS value in the graphs should seen as 0 dBFS according to the DSP, meaning 1.0 RMS value correspond to a input of 0.5 $\text{V}_\text{RMS}$ \todo{?}. The Preceding section will be covering the determination of the most suitable parameters based on the requirements from \autoref{ch:requirements} and the models. The requirements are as follows:
 
 \begin{enumerate}
 \item[1] The coil must not hit the backplate.
