--- a/Rapport/2Appendix/AcceptFrequencyResponse.tex
+++ b/Rapport/2Appendix/AcceptFrequencyResponse.tex
@@ -3,20 +3,18 @@ The purpose of this test is verify requirement 9 concerning the linearity of the
 
 \section{Setup}
 The setup of this test are depicted in \autoref{fig:AcceptFreqResponseActual}, where the equipment is catalogued in \autoref{tab:UsedEquipmentFreqResponseActual}, and described as follows:
-
-\begin{itemize}
+\begin{itemize}\addtolength{\itemsep}{-.35\baselineskip} 
 \item Frequency response will be measured by a Harmonie analyzer.
 \item A noise generator will generate the following for the test. 
-\begin{itemize}
+\begin{itemize}\addtolength{\itemsep}{-.35\baselineskip} 
 \item Sampling frequency: 48000 Hz.
 \item Generator amplitude: 100 mV.
 \item Pink noise from 20 Hz to 20 kHz
 \end{itemize}
 \item The samples are averaged over a period of 20 seconds
 \item The software of the system used for the test is found at CD. \path{CD://Software/SystemFinal}
+\item The RMS Limiter has for this test been turned off 
 \end{itemize}
-
-
 \subsection*{Test Setup}
 \begin{figure}[H]
 \centering
@@ -46,7 +44,7 @@ The setup of this test are depicted in \autoref{fig:AcceptFreqResponseActual}, w
 \section{Procedure}
 The procedure for this experiment is described as follows:
 \vspace{-5mm}
-\begin{enumerate}
+\begin{enumerate}\addtolength{\itemsep}{-.35\baselineskip} 
 \item Setup the noise generator with the mentioned settings.
 \item Setup the Harmonie and the Harmonie PC
 \item Start recording on the PC
