--- a/Rapport/2Appendix/ListningTest.tex
+++ b/Rapport/2Appendix/ListningTest.tex
@@ -7,7 +7,7 @@ This test was performed to investigated whether it is more pleasant to listen to
 
 
 
-\begin{itemize}
+\begin{itemize}\addtolength{\itemsep}{-.35\baselineskip} 
 \item A Person will be placed approximately 2-3 meters from the loudspeaker
 \item The speaker will be driven by a Crown Studio Reference I amplifier.
 \item The person will be placed directly in front of a single speaker
@@ -20,7 +20,7 @@ Furthermore the speaker will be placed in a listing room to give as natural a re
 
 The clips used are originating from following songs:
 \vspace{-5mm}
-\begin{enumerate}
+\begin{enumerate}\addtolength{\itemsep}{-.35\baselineskip} 
 \item Shots \& Squats by Vigiland
 \item Sultans Of Swings by Dire Straits
 \item Stormy Weather by Teitur
@@ -31,7 +31,7 @@ The Songs are mastered with the following effectblocks via Logic Pro:
 
 \noindent\begin{minipage}[t]{0.5\linewidth}
     \textbf{Singleband:}
-    \begin{itemize}
+    \begin{itemize}\addtolength{\itemsep}{-.35\baselineskip} 
     \item 1 band in entire frequency spectrum
     \item 12 dB attenuation at 0 dBFS
     \item Attack time of 0.5 ms and release time of 1 ms
@@ -39,7 +39,7 @@ The Songs are mastered with the following effectblocks via Logic Pro:
     \end{minipage}%
     \begin{minipage}[t]{0.5\linewidth}
     \textbf{Multiband:}
-    \begin{itemize}
+    \begin{itemize}\addtolength{\itemsep}{-.35\baselineskip} 
     \item 1 band from 0 to 100 Hz
     \item 1 band from 100 to 300 Hz
     \item 1 band from 300 to 1000 Hz
@@ -89,7 +89,8 @@ The setup inside the rooms is done as displayed on \autoref{figure:SpeakertestSe
 \section{Procedure}\label{sec:SpeakerTestProcedure3}
 
 The producer for this experiment is described as follows:
-\begin{enumerate}
+\vspace*{-5mm}
+\begin{enumerate}\addtolength{\itemsep}{-.35\baselineskip} 
 \item Adjust volume of \gls{SPL} on all songs to approximately 80-83 dB.
 \item Place test person in chair and explain procedure to him
 \item Play \path{RefX.wav}
@@ -199,12 +200,12 @@ n          & A         & B         & A         & B        \\ \bottomrule
 \label{tab:combinedanswers}
 \end{figure}  
 
-
+\vspace*{-5mm}
 \section{Analysis}
 The Raw data is first visualized in a pie chart, which creates a overview of how the answers of the test were placed. In \autoref{fig:piechartsongs} it shows this overview.
 \begin{figure}[H]
 \centering
-\resizebox{0.6\textwidth}{!}{
+\resizebox{0.5\textwidth}{!}{
 \tikzsetnextfilename{Piechartsongs}
 \begin{tikzpicture}
 [
